ajoute plus de sections et ajoute undocument fichier

--- a/index.html
+++ b/index.html
@@ -1,10 +1,137 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-  </head>
+    <title>Black Panther Party</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Trade+Winds&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Heebo&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <body>
-      <h1>Hello</h1>
+                      <!--accueil-->
+    <header>
+      <div id="accueil">
+        <div class="logo">
+          <img src="image\logo.jpg" alt="logo">
+                    <!--IMAGE ICONE MENU-->
+        </div>
+                    <!-- Menu TOGGLE -->
+        <!--<div class="menuD">
+          <a href="#"> Menu</a>
+          <a href="#n1">Qui sont ils ?</a>
+          <a href="#n2">La naissance d’un mouvement</a>
+          <a href="#n3">Les femmes dans BlackPanther</a>
+          <a href="#n4">Bref histoire</a>
+          <a href="#n6">Les Pionniers</a>
+          <a href="#Galleriedimages1">Galerie d’images</a>
+        </div>-->
+      </div>
+                  <!-- Titre et sous titre-->
+      <h1>BlackpantherParty</h1>
+      <p class="subtitle">"All Power to the people"</p>
+    </header>
+
+    <div class="espace">
+
+    </div>
+    <main>
+                  <!--Premier article-->
+      <section id="n°1">
+        <img src="image\blp.jpg" alt="fondateurs">
+
+        <div class="blocBlanc">
+          <p class="qui">Qui sont ils</p>
+        </div>
+
+        <div class="Blocblaanc">
+              <p class="descript"> Le Black Panther Party (à l'origine le Black Panther Party for Self-Defense) est un mouvement révolutionnaire de libération afro-américaine d'inspiration marxiste-léniniste et maoïste, formé en Californie le 15 octobre 1966 par Bobby Seale et Huey P. Newton
+              </p>
+            </div>
+      </section>
+
+      <div class="espacee"></div>
+
+      <section id="n°2">
+
+        <div class="cardbox">
+          <img src="image\3.jpg" alt="fondateurs">
+        </div>
+        <div class="espace"></div>
+        <h3> La naissance du mouvement</h3>
+
+      <div class="centrage">
+          <p class="titre3">Le Black Panther Party est le fruit de la rencontre de deux jeunes militants de la cause noire, Huey P. Newton et Bobby Seale, à Oakland dans la région de la baie de San Francisco en Californie. Selon les sources, les deux hommes se seraient rencontrés en 19623 au Merritt College d’Oakland auquel Newton s'était inscrit en droit4 ou lors de conférences organisées par l’Afro-American Association (AAA), une association née sur le campus de Berkeley en 1961 dont l’audience était importante dans le sud de la Californie. Son leader, Donald Warden, était l'une des figures locales de la communauté noire
+          Dans la première quinzaine d’octobre 1966, ils rédigent un programme en dix points — le Ten-Point Program (en), véritable plateforme de démonstration idéologique propre au Black Panther Party — qui s'inspire directement des préoccupations de la population et vise à être aisément compréhensible par les moins instruits11. Il s’agit de l’acte de naissance du Black Panther Party pour l'Autodéfense. Seale en devient le président, Newton le « ministre de la défense ». Le mouvement s'ancre dès ses origines dans une perspective anti-capitaliste et internationaliste </p>
+      </div>
+
+      </section>
+
+      <div class="espacee"></div>
+
+      <section id="n°3">
+        <h2>Les femmes "epines dorsales"</br> du Black Panther Party</h2>
+        <div class="cardbox2">
+          <p>Les femmes sont pourtant l’épine dorsale de cette avant-garde. Les plus célèbres se nomment Elaine Brown, Katherine Cleaver, Ericka Huggins ou Assata Shakur mais ce sont des milliers de militantes qui ont porté ce parti, dépassant les 60 % parmi les activistes.
+
+            D’emblée, elles rejoignent en masse une organisation qui porte le message de l’auto-détermination (pour les Noirs mais aussi, en abîme, pour les femmes de couleur) et met en place des politiques sociales pour les quartiers, parmi lesquels les repas gratuits pour les enfants, les cliniques et les écoles gratuites, les soins apportés aux prisonniers comme aux personnes âgées.
+            </p>
+
+            <p>Mais il faudrait se garder de croire que la division des tâches était genrée, aux hommes les fusils, aux femmes l’éducation des enfants. Les sœurs elles aussi sont armées et si le comité central du BPP voulut un temps les nommer « Pantherettes », elles affirmèrent fermement leur pleine identité de «Panther».
+            </p>
+
+            <p>
+              Engagée à 16 ans dans le parti, Tarika Lewis en deviendra par exemple une figure déterminante, offrant notamment avec ses dessins engagés dans le journal « Black Panther » une image inédite de la combattante, armée de sa chevelure naturelle et d’un fusil, guère moins redoutable que ses camarades masculins. Défiant ces derniers de l’égaler dans le maniement des armes, Lewis gravît les échelons de l’organisation et redéfinît l’image de la femme noire qui combat sur tous les fronts de l’injustice raciale.
+
+  Que les femmes noires aient le pouvoir, dans l’organisation révolutionnaire mais également dans le monde de demain à inventer fit dire à Ericka Huggins, « si vous étiez une Black Panther, vous étiez une féministe »
+            </p>
+            <img src="image\tarika.jpg" class="tarika">
+        </div>
+
+      </section>
+
+      <div class="espacee"></div>
+
+      <section id="n°4">
+        <div class="cardbox3">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/rNBPewOfL7o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          </iframe>
+          <div>
+      </section>
+
+    </main>
+    <footer>
+
+    </footer>
+
+    <script>
+
+       $(document).ready(function(){
+
+      /*   $('.menuD').hide();
+         $('.icone').click(function(){
+           $('.menuD').slideToggle('normal');
+         });*/
+
+         $('.Blocblaanc').hide();
+       $('.qui').click(function(){
+         $('.Blocblaanc').slideToggle('normal');
+       });
+
+       $('.centrage').hide();
+     $('h3').click(function(){
+       $('.centrage').slideToggle('normal');
+       $('h3').hide();
+     });
+
+      /* $('.descripte').hide();
+             $('.titre2').click(function(){
+               $('.descripte').slideToggle('normal');
+             });
+    */
+       });
+
+
+
+     </script>
   </body>
 </html>
