continue le site

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <p class="subtitle">"All Power to the people"</p>
     </header>
 
-    <div class="espace">
+    <div class="espacee"></div>
+    <div class="espacee"></div>
 
     </div>
     <main>
@@ -70,6 +71,8 @@
 
       <section id="n°3">
         <h2>Les femmes "epines dorsales"</br> du Black Panther Party</h2>
+        <div class="espacee"></div>
+        
         <div class="cardbox2">
           <p>Les femmes sont pourtant l’épine dorsale de cette avant-garde. Les plus célèbres se nomment Elaine Brown, Katherine Cleaver, Ericka Huggins ou Assata Shakur mais ce sont des milliers de militantes qui ont porté ce parti, dépassant les 60 % parmi les activistes.
 
@@ -95,9 +98,44 @@
         <div class="cardbox3">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/rNBPewOfL7o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
           </iframe>
+
+          <div class="blockBlanc">
+            <p class="Paragraphe4"> Des agents ont été payés pour devenir membre du BPP, pour perturber son travail et pour pousser ses membres à se mettre hors-la-loi. Il permet de récolter un maximum d’informations et de se tenir au courant au jour le jour. Le FBI a orchestré la désinformation et la manipulation par la publication de fausses informations dans les médias pour briser les soutiens au BPP, par l’envoi de lettres anonymes afin de créer des divisions au sein du BPP. Cela a permis la création d’un climat de suspicion entraînant des tensions internes au BPP, et des tensions avec d’autres organisations entraînant parfois une guerre ouverte.
+
+  Le FBI s’est livré au harcèlement à travers le système légal : des officiers de police donnent de faux témoignages, fabriquent des preuves pour arrêter et faire emprisonner des membres du BPP. Les FBI a directement usé de violences extra-légales : le FBI et la police menacent et provoquent des assauts, du vandalisme, des bagarres pour effrayer et pour perturber le mouvement. Au total, 38 militants du BPP ont été tués durant l’année 1970 suite à des raids organisés par la police contre les bureaux du parti.</p>
+          </div>
           <div>
       </section>
 
+      <div class="espacee"></div>
+      <div class="espacee"></div>
+
+      <section id="n°5">
+        <img src="image\14412898116413.jpg" alt="banniere">
+      </section>
+
+      <div class="espacee"></div>
+
+      <section id="n°6">
+        <h2>Les Pionniers</h2>
+
+        <div class="espacee"></div>
+
+        <table>
+          <tr>
+            <td><img src="image\eleridge.jpg"></td>
+            <td><img src="image/1652.0.jpeg"></td>
+            <td><img src="image\Newton.jpg"></td>
+          </tr>
+          <tr>
+            <td><img src="image\Angela.jpg"></td>
+            <td><img src="image\bobby.jpg"></td>
+            <td><img src="image\Assata_Shakur_FBI.jpg"></td>
+
+          </tr>
+        </table>
+      </section>
+<div class="espacee"></div>
     </main>
     <footer>
 
