ajout de hover sur deux des premiere balisestitre des sections

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <img src="image\blp.jpg" alt="fondateurs">
 
 <div class="blocBlanc">
-<p class="qui">Qui sont ils</p>
+<p class="qui">Qui sont-ils ?</p>
 </div>
 
 <div class="Blocblaanc">
@@ -61,7 +61,7 @@
 <img src="image\3.jpg" alt="fondateurs">
 </div>
 <div class="espace"></div>
-<h3> La naissance du mouvement</h3>
+<h3 class="titree"> La naissance du mouvement</h3>
 
 <div class="centrage">
 <p class="titre3">Le Black Panther Party est le fruit de la rencontre de deux jeunes militants de la cause noire, Huey P. Newton et Bobby Seale, à Oakland dans la région de la baie de San Francisco en Californie. Selon les sources, les deux hommes se seraient rencontrés en 19623 au Merritt College d’Oakland auquel Newton s'était inscrit en droit4 ou lors de conférences organisées par l’Afro-American Association (AAA), une association née sur le campus de Berkeley en 1961 dont l’audience était importante dans le sud de la Californie. Son leader, Donald Warden, était l'une des figures locales de la communauté noire
@@ -71,7 +71,7 @@ Dans la première quinzaine d’octobre 1966, ils rédigent un programme en dix 
 </section>
 
 <div class="espacee"></div>
-
+<div class="espacee"></div>
 <section id="n°3">
 <h2>Les femmes "epines dorsales"</br> du Black Panther Party</h2>
 <div class="espacee"></div>
