--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Black Panther Party</title>
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Oswald|Trade+Winds&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Heebo&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -13,21 +14,19 @@
 <div id="accueil">
 <div class="logo">
   <img src="image\logo.jpg" alt="logo">
-  <!--IMAGE ICONE MENU-->
-  <h2 class="centre">EN CHANTIER /!\</h2>
+<span class="icone"><img src="image\menu.png" alt="menu"></span>
 
-  <p>.</p>
 </div>
 <!-- Menu TOGGLE -->
-<!--<div class="menuD">
-<a href="#"> Menu</a>
+<div class="menu">
+<h2>Menu</h2>
 <a href="#n1">Qui sont ils ?</a>
 <a href="#n2">La naissance d’un mouvement</a>
 <a href="#n3">Les femmes dans BlackPanther</a>
-<a href="#n4">Bref histoire</a>
+
 <a href="#n6">Les Pionniers</a>
-<a href="#Galleriedimages1">Galerie d’images</a>
-</div>-->
+
+</div>
 </div>
 <!-- Titre et sous titre-->
 <h1>BlackpantherParty</h1>
@@ -44,7 +43,7 @@
 <img src="image\blp.jpg" alt="fondateurs">
 
 <div class="blocBlanc">
-<p class="qui">Qui sont-ils ?</p>
+<p class="qui">Qui sont ils</p>
 </div>
 
 <div class="Blocblaanc">
@@ -61,7 +60,7 @@
 <img src="image\3.jpg" alt="fondateurs">
 </div>
 <div class="espace"></div>
-<h3 class="titree"> La naissance du mouvement</h3>
+<h3> La naissance du mouvement</h3>
 
 <div class="centrage">
 <p class="titre3">Le Black Panther Party est le fruit de la rencontre de deux jeunes militants de la cause noire, Huey P. Newton et Bobby Seale, à Oakland dans la région de la baie de San Francisco en Californie. Selon les sources, les deux hommes se seraient rencontrés en 19623 au Merritt College d’Oakland auquel Newton s'était inscrit en droit4 ou lors de conférences organisées par l’Afro-American Association (AAA), une association née sur le campus de Berkeley en 1961 dont l’audience était importante dans le sud de la Californie. Son leader, Donald Warden, était l'une des figures locales de la communauté noire
@@ -71,7 +70,7 @@ Dans la première quinzaine d’octobre 1966, ils rédigent un programme en dix 
 </section>
 
 <div class="espacee"></div>
-<div class="espacee"></div>
+
 <section id="n°3">
 <h2>Les femmes "epines dorsales"</br> du Black Panther Party</h2>
 <div class="espacee"></div>
@@ -127,28 +126,28 @@ Dans la première quinzaine d’octobre 1966, ils rédigent un programme en dix 
     <table>
       <tr>
         <td class="noms1"></td>
-        <td class="noms2"></td>
-        <td class="noms">Afeni Shakur <br> 22 janvier 1947 - 2 mai 2016</td>
+          <td class="noms2"></td>
+          <td class="afeni"><p class="text-align">Afeni Shakur <br> 22 janvier 1947 -<br> 2 mai 2016</td>
       </tr>
       <tr>
-        <td class="noms"><p>Eldrige Cleaver <br> 31 aout 1935 - 1er mai 1998</p></td>
-        <td><img src="image\eleridge.jpg"></td>
-        <td><img src="image/1652.0.jpeg"></td>
-        <td><img src="image\Newton.jpg"></td>
-        <td class="noms">Huey Percy Newton <br> 17 fevrier 1942 - 22 aout 1989 </td>
+        <td class="eleridge"><p class="text-lign">Eldrige Cleaver <br> 31 aout 1935 -</br>1er mai 1998 </p></td>
+        <td class="eleridgePhoto"><img src="image\eleridge.jpg"></td>
+        <td class="afeniPhoto"><img src="image/1652.0.jpeg"></td>
+        <td class="hueyPhoto"><img src="image\Newton.jpg"></td>
+        <td class="huey"><p class="text-lign">Huey Percy Newton <br> 17 fevrier 1942 - </br>22 aout 1989</p> </td>
+
       </tr>
       <tr>
-        <td class="noms">Angela Davis <br> 26 janvier 1944
-        </td>
-        <td><img src="image\Angela.jpg"></td>
-        <td><img src="image\bobby.jpg"></td>
-        <td><img src="image\Assata_Shakur_FBI.jpg"></td>
-        <td class="noms">Assata Shakur <br> 16 juillet 1947</td>
+        <td class="angela"><p class="text-align">Angela Davis <br>26 janvier 1944</p></td>
+        <td class="angelaPhoto"><img src="image\Angela.jpg"></td>
+        <td class="bobbyPhoto"><img src="image\bobby.jpg"></td>
+        <td class="assataPhoto"><img src="image\Assata_Shakur_FBI.jpg"></td>
+        <td class="assata"><p class="text-lign">Assata Shakur <br> 16 juillet 1947</p></td>
       </tr>
       <tr>
         <td class="noms1"></td>
         <td class="noms2"></td>
-        <td class="noms">Bobby Seale <br> 22 octobre 1936</td>
+        <td class="bobby"><p class="text-align">Bobby Seale <br> 22 octobre 1936</p></td>
       </tr>
 
     </table>
@@ -168,28 +167,11 @@ Dans la première quinzaine d’octobre 1966, ils rédigent un programme en dix 
     <div class="espacee"></div>
     <div class="espacee"></div>
 
-    <section id="n°7">
-      <div class="slider">
-        <div class="slides">
-          <slide class="slide"><img src="image/reduction/1.jpg" alt=""></slide>
-          <slide class="slide"><img src="image/reduction/2.jpg" alt=""></slide>
-          <slide class="slide"><img src="image/reduction/3.jpg" alt=""></slide>
-          <slide class="slide"><img src="image/reduction/4.jpg" alt=""></slide>
-          <slide class="slide"><img src="image/reduction/5.jpg" alt=""></slide>
-          <slide class="slide"><img src="image/reduction/6.jpg" alt=""></slide>
-          <slide class="slide"><img src="image/reduction/7.jpg" alt=""></slide>
-          <slide class="slide"><img src="image/reduction/8.jpg" alt=""></slide>
-          <slide class="slide"><img src="image/reduction/9.jpg" alt=""></slide>
-          <slide class="slide"><img src="image/reduction/10.jpg" alt=""></slide>
-          <slide class="slide"><img src="image/reduction/11.jpg" alt=""></slide>
-          <slide class="slide"><img src="image/reduction/12.png" alt=""></slide>
-        </div>
-      </div>
-    </section>
+
   </main>
   <footer>
 
-
+    <p>Copyright 2020 Soumayat-Hamadi</p>
 
   </footer>
 
@@ -197,27 +179,64 @@ Dans la première quinzaine d’octobre 1966, ils rédigent un programme en dix 
 
   $(document).ready(function(){
 
-    /*   $('.menuD').hide();
+     $('.menu').hide();
     $('.icone').click(function(){
-    $('.menuD').slideToggle('normal');
-  });*/
+    $('.menu').slideToggle('normal');
+  });
 
   $('.Blocblaanc').hide();
-  $('.qui').click(function(){
-    $('.Blocblaanc').slideToggle('normal');
-  });
-
-  $('.centrage').hide();
-  $('h3').click(function(){
-    $('.centrage').slideToggle('normal');
-    $('h3').hide();
-  });
-
-  /* $('.descripte').hide();
-  $('.titre2').click(function(){
-  $('.descripte').slideToggle('normal');
+$('.qui').click(function(){
+ $('.Blocblaanc').slideToggle('normal');
 });
-*/
+
+$('.centrage').hide();
+$('h3').click(function(){
+ $('.centrage').slideToggle('normal');
+ $('h3').hide();
+});
+
+$('.bobby').hide();
+
+$('.bobbyPhoto').mouseenter(function(){
+ $('.bobby').show('normal');
+
+});
+
+$('.afeni').hide();
+
+$('.afeniPhoto').mouseenter(function(){
+ $('.afeni').show('normal');
+
+});
+
+$('.angela').hide();
+
+$('.angelaPhoto').mouseenter(function(){
+ $('.angela').show('normal');
+
+});
+
+$('.eleridge').hide();
+
+$('.eleridgePhoto').mouseenter(function(){
+ $('.eleridge').show('normal');
+
+});
+
+$('.assata').hide();
+
+$('.assataPhoto').mouseenter(function(){
+ $('.assata').show('normal');
+
+});
+$('.huey').hide();
+
+$('.hueyPhoto').mouseenter(function(){
+ $('.huey').show('normal');
+
+});
+
+
 });
 
 
